# OpenChain

./: .gitignore  BONK_INTEGRATION.md  BONK_INTEGRATION_SUMMARY.md  CHAINLINK_SECURITY_ANALYSIS.md  COMPREHENSIVE_CODEBASE_TESTING_REPORT.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  COMPREHENSIVE_TESTNET_READINESS_ANALYSIS.md  FINAL_PROJECT_STATUS_ANALYSIS.md  PROJECT_ANALYSIS.md  QUICK_START_DEPLOYMENT.md  README.md  REAL_TESTNET_DEPLOYMENT_GUIDE.md  SMART_CONTRACTS_SUMMARY.md  TESTNET_DEPLOYMENT_GUIDE.md  deploy-all.sh  env-template.txt  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-mvp.js  tsconfig.json
CrossChain/: COMPREHENSIVE-VERIFICATION-REPORT.md  Chainlink.md  FRONTEND-VERIFICATION-REPORT.md  OpenChain.md  PROJECT_STATUS.md  final-verification-report.md  package-lock.json  package.json  tsconfig.json
CrossChain/src/app/: layout.tsx  page.tsx  providers.tsx
CrossChain/src/app/borrow/: page.tsx
CrossChain/src/app/deposit/: page.tsx
CrossChain/src/app/positions/: page.tsx
CrossChain/src/app/transactions/: page.tsx
CrossChain/src/components/: TransactionModal.tsx  WalletConnector.tsx
CrossChain/src/hooks/: useChainlinkSecurity.ts  useTransactions.ts  useUserPosition.ts
CrossChain/src/lib/: contracts.ts  wagmi.ts
CrossChain/src/types/: index.ts
OpenChainMobile/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
OpenChainMobile/android/: settings.gradle
OpenChainMobile/android/app/: build.gradle
OpenChainMobile/android/app/src/main/java/com/openchain/mobile/: MainActivity.kt  MainApplication.kt
OpenChainMobile/android/app/src/main/res/values/: strings.xml
OpenChainMobile/src/: polyfills.ts
OpenChainMobile/src/components/: BonkRewards.tsx  SolanaWalletProvider.tsx
OpenChainMobile/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
OpenChainMobile/src/screens/: BonkRewardsScreen.tsx  BorrowingScreen.tsx  HomeScreen.tsx  HomeScreenShadcn.tsx  LendingScreen.tsx  LendingScreenShadcn.tsx  PortfolioScreen.tsx  PortfolioScreenShadcn.tsx  PortfolioScreen_clean.tsx
OpenChainMobile/src/services/: ApiService.ts  BackendConfig.ts  ContractService.ts  PriceService.ts
OpenChainMobile/src/theme/: colors.ts  shadcn-inspired.ts  styles.ts
contracts/evm/: .env.example  hardhat.config.ts  package-lock.json  package.json
contracts/evm/contracts/: ChainlinkPriceFeed.sol  ChainlinkSecurity.sol  LendingPool.sol  LiquidationManager.sol  Permissions.sol  RateLimiter.sol  SyntheticAsset.sol  TimeLock.sol
contracts/evm/scripts/: check-balance.js  deploy-testnet.js  deploy-testnet.ts  diagnose-contracts.js  initialize-contracts.js  update-frontend.js
contracts/solana/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
contracts/solana/programs/lending_pool/: Cargo.toml
contracts/solana/programs/lending_pool/src/: lib.rs
contracts/solana/scripts/: add-bonk-asset.js  add-bonk-asset.ts
contracts/solana/tests/: bonk-integration.js  bonk-integration.test.ts
src/app/: ClientBody.tsx  globals.css  layout.tsx  page.tsx
src/app/api/borrow/: route.ts
src/app/api/token-prices/: route.ts
src/app/borrow/: page.tsx
src/app/crosschain/: page.tsx
src/app/deposit/: page.tsx
src/app/docs/: page.tsx
src/app/news/: page.tsx
src/app/positions/: page.tsx
src/app/transactions/: page.tsx
src/components/: AppShell.tsx  Dashboard.tsx  DepositModal.tsx  LeftSidebar.tsx  MultiChainWallet.tsx  SolanaWalletProvider.tsx  WalletButton.tsx  WalletConnector.tsx
src/components/crosschain/: BorrowingProtocol.tsx  LendingProtocol.tsx  YourAssets.tsx
src/hooks/: useChainlinkSecurity.ts  useTransactions.ts  useUserPosition.ts
src/lib/: balanceService.ts  chains.ts  contracts.ts  priceService.ts  tokenConfig.ts  wagmi.ts  wagmi.ts.backup
