[workspace]
resolver = "2"
members = [
    "programs/*"
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
chainlink-solana = "1.0.0"
solana-program = "~1.16.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
